# pyflexit

./: .gitignore  LICENSE  MANIFEST  README.md  example.py  pyproject.toml  setup.py  tox.ini
docs/: RegisterNames_pyflexit.xlsx  RegistersEcoNordic.xlsx  RegistersNordic.xlsx  requirements.txt
docs/source/: api.rst  conf.py  index.rst
pyflexit/: common.py  nordic.py  pyflexit.py
src/pyflexit/: __init__.py  ci66.py  common.py  nordic.py  utils.py
tests/: conftest.py  test_ci66.py  test_common.py  test_init.py  test_nordic.py  test_utils.py
