[tool.poetry]
name = "pyflexit"
version = "0.3.0"
description = "Communicate with Flexit ventilation aggregates over modbus"
authors = ["Sabesto <sabesto@gmail.com>", "Martin Høy <marhoy@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Sabesto/pyflexit"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pymodbus = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
flake8 = "*"
isort = "*"
mypy = "*"
tox = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
