[tool.poetry]
name = "pyflexit"
version = "0.3.0"
description = "Communicate with Flexit ventilation aggregates over modbus"
authors = ["Sabesto <sabesto@gmail.com>", "Martin Høy <marhoy@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Sabesto/pyflexit"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
flake8 = "*"
isort = "*"
mypy = "*"
tox = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
black = "^19.10b0"
pydocstyle = "^5.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
